Update blog layout issue for smaller screens.

--- a/static/css/internal/base.css
+++ b/static/css/internal/base.css
@@ -106,8 +106,7 @@
 }
 
 #container {
-    margin:0 auto;
-    margin-top:30px;
+    margin:30px auto 0;
 }
 
 .loading img {
