--- a/static/css/internal/tiles.css
+++ b/static/css/internal/tiles.css
@@ -22,7 +22,7 @@
 }
 
 .w4 {
-    width:400px;
+    width:375px;
 }
 
 .w5 {
